Conclusão do método de dividir manualmente as bases em train, test e val

--- a/RotinaDeClassificacaoDaBaseDeDados.ipynb
+++ b/RotinaDeClassificacaoDaBaseDeDados.ipynb
@@ -3296,6 +3296,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Base0 NÃO Processada\n",
+        "PATH_BASE0_NAO_PROCESSADA = \"/content/drive/MyDrive/TCC/dados/processadas/balanceadas/Base1JuntaHateENotHateDaLeila_balanceada.csv\" #mudar aqui\n",
+        "\n",
         "# Base1 Com StopWords\n",
         "PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA = \"/content/drive/MyDrive/TCC/dados/processadas/balanceadas/Base1JuntaHateENotHateDaLeila_balanceada.csv\"\n",
         "\n",
@@ -3311,20 +3314,21 @@
     {
       "cell_type": "code",
       "source": [
-        "tweets_base0 = pd.read_csv(PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA, index_col=0)\n",
+        "tweets_base0 = pd.read_csv(PATH_BASE0_NAO_PROCESSADA, index_col=0)\n",
         "print(tweets_base0.shape)\n",
         "tweets_base1 = pd.read_csv(PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA, index_col=0)\n",
         "print(tweets_base1.shape)\n",
         "tweets_base2 = pd.read_csv(PATH_BASE2_LEILA_LIMPISSIMA_BALANCEADA, index_col=0)\n",
         "print(tweets_base2.shape)\n",
+        "\n",
         "bases = [tweets_base0, tweets_base1, tweets_base2]"
       ],
       "metadata": {
-        "id": "RXndLzw6NRkf",
-        "outputId": "3ba9bb21-7774-4f02-dedd-334ecc45f88b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RXndLzw6NRkf",
+        "outputId": "3ba9bb21-7774-4f02-dedd-334ecc45f88b"
       },
       "execution_count": 43,
       "outputs": [
@@ -3360,11 +3364,11 @@
         "print('list_train_size: '+str(list_train_size))"
       ],
       "metadata": {
-        "id": "c6CNnSONWt21",
-        "outputId": "fa7a3f15-fd84-4891-ebb0-6b397098dd8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c6CNnSONWt21",
+        "outputId": "fa7a3f15-fd84-4891-ebb0-6b397098dd8b"
       },
       "execution_count": 50,
       "outputs": [
@@ -3402,266 +3406,39 @@
       "metadata": {
         "id": "UbxE9QtsN_pT"
       },
-      "execution_count": 52,
+      "execution_count": 92,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "list_x_train[1]"
-      ],
-      "metadata": {
-        "id": "Ojv6GMkHRdLe",
-        "outputId": "ff194648-f8ba-46c2-a130-cc6711085ebe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8635     me afastei de tanta gente e agora estou sozinh...\n",
-              "14844    mais informações com o fórum da capital pelo t...\n",
-              "9156     ahyramferreira calubarros é bem por essa linha...\n",
-              "6827     ele nunca ele não bolsobosta eleiçõesrbs208 br...\n",
-              "4333                            ir para escola odeio issoo\n",
-              "                               ...                        \n",
-              "5069     o excesso de botox afetou o cérebro desse mari...\n",
-              "7208     acabou a piranhagem pt muda brasil partido dos...\n",
-              "7075     tchau querido   partido dos trabalhadores nunc...\n",
-              "5366     flamengo está movendo a economia do rio e do p...\n",
-              "14                                    troca vivo é um lixo\n",
-              "Name: text, Length: 9620, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_y_train[1]"
-      ],
-      "metadata": {
-        "id": "tT5-tWhkRfRa",
-        "outputId": "2cf3e56b-c5b0-4843-88f0-4886ae376098",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8635     0\n",
-              "14844    0\n",
-              "9156     0\n",
-              "6827     1\n",
-              "4333     1\n",
-              "        ..\n",
-              "5069     1\n",
-              "7208     1\n",
-              "7075     1\n",
-              "5366     1\n",
-              "14       1\n",
-              "Name: label, Length: 9620, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 61
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_x_test[1]"
-      ],
-      "metadata": {
-        "id": "NdvQRwxvRq-w",
-        "outputId": "9306dca6-f059-47ab-94e2-d56dc61afea7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9513     minha mãe chorando lendo o texto e vendo o con...\n",
-              "4551     só me resta comprender o quanto você e tiriric...\n",
-              "14394    trujio a bolsa tem esse lado biion que é detes...\n",
-              "3483                             odeio que me acordem vtnc\n",
-              "6009     bom desse calor é que não sinto fome mas em co...\n",
-              "                               ...                        \n",
-              "13648    o menino fã do bandaracanegra agora canta sert...\n",
-              "5158     minha mãe falou para vizinha que já está esper...\n",
-              "8437     vendi meu celular e ainda não arrumei um empre...\n",
-              "12672                emanuelydeborah eu vou voltar domingo\n",
-              "561      será que não cabe um largo processo ou até mes...\n",
-              "Name: text, Length: 3208, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 62
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_y_test[1]"
-      ],
-      "metadata": {
-        "id": "2g0xIY-HRtSr",
-        "outputId": "8d11577d-32d2-44e6-e3f5-75123fcd9dde",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9513     0\n",
-              "4551     1\n",
-              "14394    0\n",
-              "3483     1\n",
-              "6009     1\n",
-              "        ..\n",
-              "13648    0\n",
-              "5158     1\n",
-              "8437     0\n",
-              "12672    0\n",
-              "561      1\n",
-              "Name: label, Length: 3208, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 63
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_x_val[1]"
-      ],
-      "metadata": {
-        "id": "iUKWDLPKbfsR",
-        "outputId": "5ab53e16-50a3-4fe0-f047-8af6cd4d8ee0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2316                   eu odeio cheiro de cigarro na moral\n",
-              "7678     taiu nessa campanha quanto mais eles se mexem ...\n",
-              "13853               samos ou não samos um raiscul miusical\n",
-              "5251     a joice se apropriou do discurso da esquerdalh...\n",
-              "12041                    vou sair daqui preta de tanto sol\n",
-              "                               ...                        \n",
-              "177      deveria ter uma forma de suspender o sinal das...\n",
-              "15140       parei vai que agora eu goste da denise não sei\n",
-              "2416     tesão de manhã todo mundo sente difícil é sent...\n",
-              "11767                                tudo errado para mim \n",
-              "306       lixo jornalística mídia esquerdopata descartável\n",
-              "Name: text, Length: 3208, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 64
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_y_val[1]"
-      ],
-      "metadata": {
-        "id": "9BDN_xhGbhKL",
-        "outputId": "cb6a81b2-ec04-4484-bad3-4f0846aefa7f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2316     1\n",
-              "7678     1\n",
-              "13853    0\n",
-              "5251     1\n",
-              "12041    0\n",
-              "        ..\n",
-              "177      1\n",
-              "15140    0\n",
-              "2416     1\n",
-              "11767    0\n",
-              "306      1\n",
-              "Name: label, Length: 3208, dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "type(list_y_val[1])"
-      ],
-      "metadata": {
-        "id": "2tXSz0IKb0i1",
-        "outputId": "b61640ca-1c1d-4ed6-f7a8-38fac1901590",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 66,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "pandas.core.series.Series"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 66
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
+        "dict_output_files = {}\n",
+        "for i in range(3):\n",
+        "  df_train = pd.concat([list_x_train[i], list_y_train[i]], axis=1).reset_index(drop=True)\n",
+        "  df_test = pd.concat([list_x_test[i], list_y_test[i]], axis=1).reset_index(drop=True)\n",
+        "  df_val = pd.concat([list_x_val[i], list_y_val[i]], axis=1).reset_index(drop=True)\n",
+        "  dict_output_files[i] = [df_train, df_test, df_val]\n",
+        "\n",
+        "dict_output_files"
       ],
       "metadata": {
         "id": "Spqz7rkncZO8"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "  dict_output_files[i][0].to_csv('/content/drive/MyDrive/TCC/dados/processadas/bases_balanceadas_divididas/train'+str(i)+'.csv')\n",
+        "  dict_output_files[i][1].to_csv('/content/drive/MyDrive/TCC/dados/processadas/bases_balanceadas_divididas/test'+str(i)+'.csv')\n",
+        "  dict_output_files[i][2].to_csv('/content/drive/MyDrive/TCC/dados/processadas/bases_balanceadas_divididas/val'+str(i)+'.csv')\n"
+      ],
+      "metadata": {
+        "id": "rlBZG35bdNKg"
+      },
+      "execution_count": 89,
       "outputs": []
     }
   ]
