Adicionado proximos passos

--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -150,11 +150,11 @@
     {
       "cell_type": "code",
       "source": [
-        "def logits_to_text(logits, tokenizer):\n",
-        "    index_to_words = {id: word for word, id in tokenizer.word_index.items()}\n",
-        "    index_to_words[0] = '<PAD>'\n",
+        "# def logits_to_text(logits, tokenizer):\n",
+        "#     index_to_words = {id: word for word, id in tokenizer.word_index.items()}\n",
+        "#     index_to_words[0] = '<PAD>'\n",
         "\n",
-        "    return ' '.join([index_to_words[prediction] for prediction in np.argmax(logits, 1)])"
+        "#     return ' '.join([index_to_words[prediction] for prediction in np.argmax(logits, 1)])"
       ],
       "metadata": {
         "id": "pX78imOBI9l8"
@@ -653,10 +653,10 @@
       ],
       "metadata": {
         "id": "9YLL1kZTDzUG",
-        "outputId": "045cdb04-0390-4e12-8778-369a914757e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "045cdb04-0390-4e12-8778-369a914757e3"
       },
       "execution_count": 45,
       "outputs": [
@@ -2251,11 +2251,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Fazer a separação de Treinamento, Teste e validação 60 20 20  \n",
+        "# Fazer a separação de Treinamento, Teste e validação \n",
+        "  # Alterar todos os modelos para ler desse novo jeito\n",
         "# Ver NaiveBayes, colocar na tabela\n",
+        "  # Falta salvar o treinamento no arquivo de resultados\n",
         "# Ver ShallowNet, colocar na tabela\n",
+        "  # ler igual a tarefa1\n",
         "# Rever LSTM\n",
+        "  # rever o foward e backward layer\n",
         "# Prioridade é fechar o Resultado ( Tabelas )\n",
+        "  # Rodar tudo\n",
         "# Ajustar Tabelas ( embelezar )\n",
         "# Ajustar Graficos ( embelezar )\n",
         "# Ver BiLstm / Otmizador \n",
@@ -2268,6 +2273,58 @@
         "id": "KXhecZ-T4gvP"
       },
       "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "grafico Acuracy b1  \n",
+        "\t\tb1 cnn melhor\n",
+        "\t\tb1 lstm melhor\n",
+        "\t\t.\n",
+        "\t\t.\n",
+        "\n",
+        "grafico Loss b1  \n",
+        "\t\tb1 cnn melhor\n",
+        "\t\tb1 lstm melhor\n",
+        "\t\t.\n",
+        "\t\t.\n",
+        "\n",
+        "grafico Acuracy b2 \n",
+        "\t\tb2 cnn melhor\n",
+        "\t\tb2 lstm melhor\n",
+        "\t\t.\n",
+        "\t\t.\n",
+        "\n",
+        "grafico Loss b2 \n",
+        "\t\tb2 cnn melhor\n",
+        "\t\tb2 lstm melhor\n",
+        "\t\t.\n",
+        "\t\t.\n",
+        "\n",
+        "grafico Acuracy b0\n",
+        "\t\tbo cnn melhor\n",
+        "\t\tb0 lstm melhor\n",
+        "\n",
+        "grafico Loss b0\n",
+        "\t\tb0 cnn melhor\n",
+        "\t\tb0 lstm melhor\n",
+        "\t\t.\n",
+        "\t\t.\n"
+      ],
+      "metadata": {
+        "id": "60WPEwEam0mw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "NqUMo2YGm0Uw"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
